--- a/m2_springmvc/src/main/webapp/WEB-INF/web.xml
+++ b/m2_springmvc/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,24 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <!-- 配置springmvc 一：核心文件的配置-->
+  <servlet>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:spring-mvc.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <!--
+        /   拦截所有的请求路径  （不包含jsp，html）
+        /*  拦截所有的请求路径
+
+    -->
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
 </web-app>
