--- a/m2_springmvc/pom.xml
+++ b/m2_springmvc/pom.xml
@@ -62,6 +62,22 @@
       <scope>test</scope>
     </dependency>
 
+    <!--springMVC自动转化java对象和json字符串的依赖包-->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
